# sumfold_deSNARK

./: .gitignore  Cargo.toml  README.md  SAFE_OPTIMIZATIONS.md  SUMFOLD_DESNARK_MODIFICATION_PLAN.md  TWO_LEVEL_SUMFOLD.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.claude/: settings.local.json
.github/workflows/: build.yml  build_nix.yml
HyperPianist/: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
HyperPianist/arithmetic/: Cargo.toml
HyperPianist/arithmetic/benches/: bind_poly_bench.rs
HyperPianist/arithmetic/src/: eq_poly.rs  fraction.rs  lib.rs  multilinear_polynomial.rs  optimized_mul.rs  util.rs  virtual_polynomial.rs
HyperPianist/bench_results/: hyperpianist-extratime.csv  hyperpianist-layered-circuit.csv  hyperpianist-piop.csv  hyperpianist-wan-layered-circuit.csv  hyperpianist-wan-piop.csv  hyperplonk-optimized-msm.csv  hyperplonk-single-machine.csv  hyperplonk.csv  lookup-hyperpianist-piop.csv  lookup-hyperpianist.csv  lookup-lasso-piop.csv  lookup-lasso.csv  pianist-jellyfish.csv  pianist-vanilla.csv  pianist-wan-jellyfish.csv  pianist-wan-vanilla.csv
HyperPianist/deDory/: Cargo.toml
HyperPianist/deDory/data/: 4
HyperPianist/deDory/examples/: de_eval_test.rs
HyperPianist/deDory/src/: deCommit.rs  deSetup.rs  lib.rs  setup.rs
HyperPianist/deDory/src/eval/: deProve.rs  deVerify.rs  mod.rs  prove.rs  utility.rs  verify.rs
HyperPianist/deNetwork/: Cargo.toml
HyperPianist/deNetwork/src/: channel.rs  lib.rs  multi.rs  two.rs
HyperPianist/hyperpianist/: Cargo.toml
HyperPianist/hyperpianist/benches/: bench.rs
HyperPianist/hyperpianist/dTests/: bench.rs  common.rs  e2e.rs  run.sh
HyperPianist/hyperpianist/src/: custom_gate.rs  lib.rs  lookup.rs  mock.rs  prelude.rs  selectors.rs  snark.rs  structs.rs  utils.rs  witness.rs
HyperPianist/scripts/: run_interactive_bench.ps1  run_interactive_bench.sh
HyperPianist/subroutines/: Cargo.toml
HyperPianist/subroutines/benches/: pcs_bench.rs
HyperPianist/subroutines/dTests/: common.rs  dCombinedCheck.rs  dLookup.rs  dMultiRationalSumcheck.rs  dPermcheck.rs  dRationalSumcheck.rs  dRationalSumcheckPIOP.rs  dSumcheck.rs  dZerocheck.rs  deDory.rs  deMkzg.rs  deNetwork.rs  lookup_bench.rs  run.sh
HyperPianist/subroutines/src/pcs/: dummy.rs  mod.rs  prelude.rs  structs.rs
HyperPianist/subroutines/src/pcs/deMultilinear_kzg/: batching.rs  deMkzg.rs  mod.rs
HyperPianist/subroutines/src/pcs/dory/: batching.rs  deDory.rs  dory.rs  mod.rs
HyperPianist/subroutines/src/pcs/multilinear_kzg/: batching.rs  mod.rs  srs.rs
HyperPianist/subroutines/src/pcs/univariate_kzg/: mod.rs
HyperPianist/subroutines/src/poly_iop/: mod.rs  prelude.rs  structs.rs  utils.rs
HyperPianist/subroutines/src/poly_iop/combined_check/: mod.rs
HyperPianist/subroutines/src/poly_iop/lookup/: README.md  logup_checking.rs  logup_checking_piop.rs  mod.rs  util.rs
HyperPianist/subroutines/src/poly_iop/multi_rational_sumcheck/: mod.rs
HyperPianist/subroutines/src/poly_iop/perm_check/: grand_product_circuit.rs  mod_layered_circuit.rs  mod_piop.rs  util.rs
HyperPianist/subroutines/src/poly_iop/prod_check/: mod.rs  util.rs
HyperPianist/subroutines/src/poly_iop/rational_sumcheck/: layered_circuit.rs  mod.rs
HyperPianist/subroutines/src/poly_iop/sum_check/: mod.rs  prover.rs  verifier.rs
HyperPianist/subroutines/src/poly_iop/zero_check/: mod.rs  prover.rs  verifier.rs
HyperPianist/transcript/src/: lib.rs
arithmetic/: Cargo.toml
arithmetic/src/: eq_poly.rs  lib.rs  math.rs  multilinear_polynomial.rs  unipoly.rs  util.rs  virtual_polynomial.rs
bench_results/dist_logs/: large_nv22_23_20260223.csv  small_nv10_14_20260223_102630.csv
deNetwork/: Cargo.toml
deNetwork/src/: channel.rs  lib.rs  multi.rs  two.rs
deSnark/: Cargo.toml  README.md
deSnark/benches/: bench.rs  sumfold_profile.rs
deSnark/examples/: bench_large.toml  bench_small.toml  demo_config.toml  dist_bench.rs  dist_prove_demo.rs  hosts_4.txt  lightweight_bench.rs
deSnark/src/: d_sumfold.rs  errors.rs  lib.rs  snark.rs  structs.rs
hyperplonk/: Cargo.toml
hyperplonk/benches/: bench.rs
hyperplonk/src/: lib.rs  mock.rs  prelude.rs  snark.rs  utils.rs
scripts/: run_bench.ps1  run_bench.sh  run_desnark_demo.sh  run_interactive_bench.ps1  run_interactive_bench.sh  run_tests.sh
subroutines/: Cargo.toml
subroutines/benches/: iop_bench.rs
subroutines/examples/: dist_sum_fold_demo.rs
subroutines/src/: lib.rs
subroutines/src/pcs/: mod.rs  prelude.rs
subroutines/src/pcs/deMultilinear_kzg/: batching.rs  deMkzg.rs  mod.rs
subroutines/src/pcs/multilinear_kzg/: batching.rs  mod.rs  util.rs
subroutines/src/pcs/univariate_kzg/: mod.rs
subroutines/src/poly_iop/: mod.rs  prelude.rs  structs.rs  utils.rs
subroutines/src/poly_iop/perm_check/: mod.rs  util.rs
subroutines/src/poly_iop/prod_check/: mod.rs  util.rs
subroutines/src/poly_iop/sum_check/: batched_cubic_sumcheck.rs  dist_sum_fold.rs  generic_sumcheck.rs  mod.rs  prover.rs  verifier.rs
subroutines/src/poly_iop/zero_check/: mod.rs
