[package]
name = "hyperplonk"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arithmetic = { path = "../arithmetic" }
ark-ec = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.0", default-features = false }
ark-poly = { version = "^0.4.0", default-features = false }
ark-poly-commit = "0.5.0"
ark-serialize = { version = "^0.4.0", default-features = false, features = [
    "derive",
] }
ark-std = { version = "^0.4.0", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
rayon = { version = "1.5.2" }
subroutines = { path = "../subroutines" }
transcript = { path = "../transcript" }
util = { path = "../util" }
datasize = "0.2.15"

[dev-dependencies]
ark-bls12-381 = { version = "0.4.0", default-features = false, features = [
    "curve",
] }
ark-bn254 = { version = "0.4.0", features = ["asm"] }

# Benchmarks
[[bench]]
name = "hyperplonk-benches"
path = "benches/bench.rs"
harness = false

[features]
# default = [ ]
# default = [ "parallel" ]
# default = [ "parallel", "print-trace" ]
default = ["parallel"]
bench = ["parallel"]
# extensive sanity checks that are useful for debugging
extensive_sanity_checks = ["subroutines/extensive_sanity_checks"]
parallel = [
    # "rayon",
    "ark-std/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-ec/parallel",

    "arithmetic/parallel",
    "subroutines/parallel",
    "util/parallel",
]
print-trace = [
    "ark-std/print-trace",
    "arithmetic/print-trace",
    "subroutines/print-trace",
]
