[package]
name = "deNetwork"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
log = {version = "0.4"}
#ark-std = { path = "../utils", default-features = false }
ark-std = { version = "0.4.0", features = [ "parallel" ] }
derivative = { version = "2.0", features = ["use_core"]}
ark-serialize = { version = "0.4.0" }
#crossbeam = "0.8"
rayon = "1.5.1"
digest = { version = "0.9" }
rand = { version = "0.7", default-features = false, features = ["std"] }
sha2 = "0.9"
crossbeam-channel = "0.5.13"
mio = { version = "1.0.2", features = ["os-poll", "net"] }

[dev-dependencies]
structopt = { version = "0.3" }
env_logger = "0.8"

