[package]
name = "hyperpianist"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arithmetic = { path = "../arithmetic" }
ark-ec = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.0", default-features = false, features = ["asm"] }
ark-poly = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.4.0", default-features = false, features = [ "derive" ] }
ark-std = { version = "^0.4.0", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
itertools = "0.13.0"
rayon = { version = "1.5.2", default-features = false, optional = true }
subroutines = { path = "../subroutines" }
transcript = { path = "../transcript" }
deNetwork = { path = "../deNetwork" }
util = { path = "../util" }
lazy_static = "1.5.0"

[dev-dependencies]
ark-bls12-381 = { version = "0.4.0", default-features = false, features = [ "curve" ] }
ark-bn254 = { version = "0.4.0", features = ["asm"] }
structopt = { version = "0.3" }
rand = "0.8.5"
deDory = { path = "../deDory" }

# Benchmarks
[[bench]]
name = "hyperplonk-benches"
path = "benches/bench.rs"
harness = false

[[example]]
name = "hyperpianist-bench"
path = "dTests/bench.rs"

[[example]]
name = "e2e"
path = "dTests/e2e.rs"

[features]
# default = [ ]
# default = [ "parallel" ]
# default = [ "parallel", "print-trace" ]
default = ["parallel", "extensive_sanity_checks", "rational_sumcheck_piop" ]
bench = ["parallel"]
# extensive sanity checks that are useful for debugging
extensive_sanity_checks = [
    "subroutines/extensive_sanity_checks",
 ]
parallel = [ 
    "rayon",
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-poly/parallel", 
    "ark-ec/parallel",

    "arithmetic/parallel",
    "subroutines/parallel",
    "util/parallel"
    ]
print-trace = [ 
    "ark-std/print-trace",
    "arithmetic/print-trace",
    "subroutines/print-trace"
    ] 
rational_sumcheck_piop = ["subroutines/rational_sumcheck_piop"]
